--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^4.8.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
